# diploma

./: .gitignore  F.yml  LICENSE  README.md
presentation/: presentation.tex  referee_report.tex  slides.tex
prezi/: prezi.tex
report/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  declaration.tex  diploma.tex  introduction.tex  mybib.bib  project.tex  titlepage.tex
report/bib/: mybib.bib
report/content/: abstract.tex  acknowledgement.tex  appendices.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex  introduction.tex
report/include/: declaration.tex  packages.tex  preamble.tex  thesis-hu.tex  titlepage.tex
report_bak/: abstract.tex  acknowledgement.tex  appendices.tex  chapter1.tex  chapter2.tex  diploma.tex  introduction.tex
src/: extrinsics.yml  extrinsics_1013.yml  extrinsics_1105.yml  intrinsics.yml  intrinsics_1013.yml  intrinsics_1105.yml  stereo_calib.xml
src/final/: Blob.h  CMakeLists.txt  Calibration.cpp  Calibration.hpp  Camera.cpp  Camera.hpp  Common.cpp  Common.h  DinoCamera.cpp  DinoCamera.hpp  DummyCamera.cpp  DummyCamera.hpp  FPSCounter.cpp  FPSCounter.h  FakeCamera.cpp  FakeCamera.h  MatVisualization.cpp  MatVisualization.h  MultiObjectSelector.h  MultiView.cpp  MultiView.h  MyMatcher.cpp  MyMatcher.h  OFReconstruction.cpp  OFReconstruction.h  Object.h  ObjectSelector.cpp  ObjectSelector.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpticalFlowCalculator.cpp  OpticalFlowCalculator.h  PclVisualization.cpp  PclVisualization.h  PerformanceIndicator.h  PerformanceMonitor.cpp  PerformanceMonitor.h  RealCamera.cpp  SURFFeatureExtractor.cpp  SURFFeatureExtractor.h  (+22 more)
src/final/__unused/: MultiView.h  OFReconstruction.cpp  OFReconstruction.h  OpenGLRenderer.hpp  PclVisualization.cpp  StereoCalibration.cpp  StereoCamera.cpp  TemporalOpticalFlowCalculator.cpp  TriTest.cpp  Vector.hpp  sfm.cpp
src/final/calibration/: Calibration.cpp  Calibration.h  CameraPoseCalculator.cpp  CameraPoseCalculator.h  StereoCalibration.hpp
src/final/camera/: Camera.cpp  Camera.hpp  CameraPose.cpp  CameraPose.h  DummyCamera.cpp  DummyCamera.hpp  FakeCamera.cpp  RealCamera.cpp  RealCamera.hpp  StereoCamera.hpp  VirtualCamera.h
src/final/mask/: ForegroundMaskCalculator.h  MOG2ForegroundMaskCalculator.cpp  MOG2ForegroundMaskCalculator.h  OFForegroundMaskCalculator.cpp  OFForegroundMaskCalculator.h
src/final/object/: Blob.cpp  Blob.h  Matcher.cpp  Matcher.h  MultiObjectSelector.cpp  MultiObjectSelector.h  MyMatcher.cpp  MyMatcher.h  Object.cpp  Object.h  ObjectSelector.cpp  ObjectSelector.h  SURFFeatureExtractor.cpp  SingleObjectSelector.cpp  SingleObjectSelector.hpp
src/final/optical_flow/: MultiObjectOpticalFlowCalculator.cpp  MultiObjectOpticalFlowCalculator.h  OFReconstruction.cpp  OFReconstruction.h  OpticalFlowCalculator.cpp  OpticalFlowCalculator.h  ReportOpticalFlowCalculator.cpp  ReportOpticalFlowCalculator.h  SpatialOpticalFlowCalculator.cpp  SpatialOpticalFlowCalculator.h  TemporalOpticalFlowCalculator.cpp  TemporalOpticalFlowCalculator.h
src/magic/: CMakeLists.txt  Calibration.cpp  Calibration.hpp  Camera.hpp  DummyCamera.cpp  DummyCamera.hpp  DummyStereoCamera.cpp  DummyStereoCamera.hpp  RealCamera.cpp  RealCamera.hpp  RealStereoCamera.cpp  RealStereoCamera.hpp  StereoCamera.cpp  StereoCamera.hpp  calibrate.cpp  main.cpp  video.cpp
src/reconstruction/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Magic.cpp  Magic.h  OpenGLRenderer.cpp  OpenGLRenderer.h  PCDReader.cpp  PCDReader.h  PCDWriter.cpp  PCDWriter.h  PointCloudSegmenter.cpp  PointCloudSegmenter.h  Vector.h  load_calib.cpp.chess_pc  load_calib_surf.cpp.bak  main.cpp_old  merge_clouds.cpp  reconstruct.cpp  save_images.cpp  stereo_calib.cpp  triangulate.cpp
test_data/: intrinsics_left.yml  intrinsics_right.yml  polc_pose_left.yml  polc_pose_right.yml  pose_left.yml  pose_left_old.yml  pose_right.yml  pose_right_old.yml
